# fruit_shop

./: .pre-commit-config.yaml  pyproject.toml
chat/: consumers.py  models.py  routing.py
chat/migrations/: 0001_initial.py
declarations/: apps.py  models.py
declarations/migrations/: 0001_initial.py
fruit_shop/: asgi.py  settings.py  urls.py  wsgi.py
goods/: models.py  urls.py  views.py
goods/migrations/: 0001_initial.py
static/js/: scripts.js
templates/: main_page.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
